public/main.css
/* ... */
.article-figure__subheading + .article-figure__content {
  margin-top: 0.5em;
}

@media (max-width: 46.24em) {
  .article-figure .article-figure__subheading {
    font-size: 14px;
  }
}

.article-head__dateline {
  font-size: 12px;
  margin-bottom: 0;
}

.section-head {
  margin-bottom: 0;
}

.rail__content {
  padding-bottom: 1em;
  border-left: 1px solid #cec6b9;
  font-family: "MetricWeb", sans-serif;
}

.rail__content h3 {
  border-bottom: 1px solid #cec6b9;
  padding-bottom: 5px;
  padding-left: 20px;
  font-family: "MetricWeb", sans-serif;
  font-weight: 500;
}

.rail__state-list {
  padding-left: 20px;
}

.rail__state-list h4 {
  font-family: "MetricWeb", sans-serif;
  font-weight: 500;
  color: #333;
}

.rail__state-list ul {
  margin-left: 0;
  padding-left: 0;
  font-family: "MetricWeb", sans-serif;
  margin-bottom: 2em;
}

.rail__state-list li {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;
}

.rail__state-list li a {
  color: #6b6e68;
  border-bottom: none;
}

.rail__state-list li a:hover {
  color: #27757b;
  border-bottom: 1px dotted #27757b;
}

.rail__state-list select {
  width: 100%;
  margin-bottom: 2em;
}

.rail__state-list__nationalLink a {
  color: #9e2f50;
  border-bottom: none;
  font-weight: 500;
}

.rail__state-list__nationalLink a:hover {
  border-bottom: 1px dotted #9e2f50;
}

.o-typography-body-wrapper .source {
  line-height: 1.1;
  margin-top: 3em;
  padding: 0.1em;
  color: #333;
  font-style: italic;
  font-family: MetricWeb, sans-serif;
  border-top: 1px solid #cec6b9;
}
.o-typography-body-wrapper .note {
  line-height: 1.1;
  margin-top: 0.5em;
  margin-bottom: 1em;
  color: #6b6e68;
  font-family: MetricWeb, sans-serif;
}
.pollchart {
  display: none;
  margin: 0 auto;
}
.pollchart svg {
  display: block;
  margin: 0 auto;
  width: 100%;
  height: auto;
}
#latestnews {
  border-top: 1px solid #cec6b9;
  border-bottom: 1px solid #cec6b9;
  margin: 3em auto;
}
#latestnews h3 {
  font-family: MetricWeb, sans-serif;
  margin: 0.5em 0 1em 0;
  font-weight: 500;
}
.forecast-map {
  display: block;
  margin: 0 auto;
}
.forecast-map__label > text {
  fill: #222;
}
.forecast-map__label--external > rect {
  stroke: none;
}
.forecast-map__state-shape {
  stroke: #fff1e0;
  stroke-width: 1.5;
}
.forecast-map__two-letter-name { display: none; }
.forecast-map__state-shape--AK,
.forecast-map__state-shape--HI {
  stroke: none;
}
.o-typography-body-wrapper footer {
  font-size: 21px;
  line-height: 24px;
  margin: 20px 0;
}
@media (max-width: 46.25em) {
  .forecast-map {
    width: 30.625em;
    height: 18em;
  }
  .forecast-map__short-name { display: none; }
  .forecast-map__two-letter-name {
    display: inline;
    font-size: 27px;
  }
}
@media (max-width: 30.625em) {
  .forecast-map {
    width: 300px;
    height: 11.3em;
  }
}
p.notavailable {
  color: #666;
  font-size: 1em;
}
p.off-link{
  font-size: 24px;
  text-align: right;
  font-family: MetricWeb, sans-serif;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  max-width: none;
}
p.off-link a{
  border: none;
}
p.off-link a:after {
    content: " ";
    background: url('https://image.webservices.ft.com/v1/images/raw/fticon:arrow-right?height=36&tint=27757b,27757b&source=ig') no-repeat center center;
    background-size: 18px 18px;
    float: right;
    width: 24px;
    height: 35px;
    margin: 0;
}
a {
  text-decoration: none;
}
@media (max-width: 30.615em) {
  .pollchart.pollchart--default {
    display: block;
  }
  .pollchart.pollchart--default svg {
    max-width: 380px;
  }
}
@media (max-width: 46.24em) and (min-width: 30.625em) {
  .pollchart.pollchart--S {
    display: block;
  }
  .pollchart.pollchart--S svg {
    max-width: 705px;
  }
}
@media (max-width: 61.24em) and (min-width: 46.25em) {
  .pollchart.pollchart--M {
    display: block;
  }
  .pollchart.pollchart--M svg {
    max-width: 657px;
  }
}
@media (max-width: 76.24em) and (min-width: 61.25em) {
  .pollchart.pollchart--L {
    display: block;
  }
  .pollchart.pollchart--L svg {
    max-width: 708px;
  }
}
@media (min-width: 76.25em) {
  .pollchart.pollchart--XL {
    display: block;
    max-width: 741px;
  }
}

.o-expander .table-toggle-btn {
  margin: 2em auto;
  display: block;
  width: 80%;
  max-width: 300px;
}

.o-typography-body-wrapper .national-bar__header {
  margin-top: 2em;
  margin-bottom: -1em;
  color: #6b6e68;
  font-family: MetricWeb, sans-serif;
  font-weight: 400;
}

#national-bar-wrapper {
  margin: 3em 0;
}

#national-bar-wrapper * {
  box-sizing: border-box;
}

.national-bar--head-icons {
  width: 9%;
  display: inline-block;
  vertical-align: bottom;
  margin-bottom: -16px;
}

.national-bar--head-icons img {
  width: 100%;
}

#national-bar-container {
  width: 80%;
  height: 20px;
  position: relative;
  display: inline-block;
}

#national-270-line {
  position: absolute;
  width: 50%;
  height: 250%;
  border-right: 2px solid black;
  bottom: 0;
  z-index: 2;
}

#national-270-line:after {
  content: "270 to win";
  position: absolute;
  right: -30px;
  top: -20px;
  font-weight: 600;
}

.national-bar-container--subbars {
  display: inline-block;
  height: 100%;
  margin: 0;
  padding: 0;
  float: left;
  text-align: center;
  position: relative;
}

.national-bar-container-values {
  position: absolute;
  top: -20px;
  left: 0;
  width: 100%;
  font-size: 14px;
}

.national-bar-container-keys {
  position: absolute;
  top: 20px;
  left: 0;
  white-space: nowrap;
  width: 100%;
  font-weight: 600;
  line-height: 0.9em;
  margin-top: 0.3em;
}

#national-bar-container-keys--dem {
  color: #579dd5;
}

#national-bar-container-keys--rep {
  color: #e03d46;
  text-align: right;
}

.national-bar-container-keys--party {
  font-size: 14px;
  color: #666;
  font-weight: 400;
  margin-top: -2px;
}

.national-bar-container-group-sums {
  font-size: 2em;
  font-weight: 500;
  position: absolute;
  top: -63px;
}

#national-bar-container-group-sums--dem {
  color: #579dd5;
}
/* ... */

